--- a/docker/images/n8n-custom/Dockerfile
+++ b/docker/images/n8n-custom/Dockerfile
@@ -5,37 +5,36 @@ USER root
 
 # Install FFmpeg using Alpine package manager
 RUN apk update && \
-    apk add --no-cache ffmpeg && \
-    mkdir -p /home/node/tmp && \
-    chown node:node /home/node/tmp && \
-    chmod 777 /home/node/tmp
+    apk add --no-cache ffmpeg
 
-# Create and set permissions for .n8n directory
-RUN mkdir -p /home/node/.n8n && \
-    chown -R node:node /home/node/.n8n && \
-    chmod -R 700 /home/node/.n8n
+# Create necessary directories
+RUN mkdir -p /mnt/n8n/workflows && \
+    mkdir -p /mnt/n8n/temp && \
+    chown -R node:node /mnt/n8n && \
+    chmod -R 755 /mnt/n8n
 
-# Debug: Print FFmpeg location and version
-RUN which ffmpeg && \
-    ffmpeg -version && \
-    echo "FFmpeg installation verified"
-
-# Ensure FFmpeg is in PATH and accessible
-RUN ln -sf $(which ffmpeg) /usr/local/bin/ffmpeg && \
-    echo "PATH=$PATH" && \
-    ls -la /usr/local/bin/ffmpeg
+# Ensure FFmpeg is in PATH
+RUN ln -sf $(which ffmpeg) /usr/local/bin/ffmpeg
 
 # Set environment variables
-ENV N8N_TEMP_DIR=/home/node/tmp
-ENV N8N_USER_FOLDER=/home/node/.n8n
+ENV N8N_DATA_FOLDER=/mnt/n8n/workflows
+ENV N8N_TEMP_DIR=/mnt/n8n/temp
 ENV PORT=5678
+ENV N8N_PROTOCOL=https
+ENV N8N_HOST=api.thetunecanvas.com
+ENV WEBHOOK_URL=https://api.thetunecanvas.com/
 ENV N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=false
 
 # Switch to node user for security
 USER node
 
+# Create symbolic link for backwards compatibility
+RUN mkdir -p /home/node/.n8n && \
+    ln -sf /mnt/n8n/workflows/* /home/node/.n8n/ || true
+
 # Debug: Verify setup
-RUN ffmpeg -version || echo "Failed to run ffmpeg as node user" && \
-    echo "Current PATH: $PATH" && \
-    which ffmpeg || echo "ffmpeg not in PATH" && \
-    ls -la /home/node/.n8n || echo "Cannot access .n8n directory"
+RUN echo "Verifying directories and permissions:" && \
+    ls -la /mnt/n8n/workflows || echo "Cannot access workflows directory" && \
+    ls -la /mnt/n8n/temp || echo "Cannot access temp directory" && \
+    echo "FFmpeg version:" && \
+    ffmpeg -version
